--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hotel MB</title>
+    <meta
+      name="description"
+      content="Welcome to the best booking site in Tel-Aviv Israel"
+    />
+    <meta name="keywords" content="hotel, booking, Tel-Aviv, vacation" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <title>Hotel MB | Hotels Booking in Tel-Aviv</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="container">
+          <h1 class="logo">
+            <a href="./index.html">HMB</a>
+          </h1>
+          <ul>
+            <li>
+              <a class="current" href="./index.html">Home</a>
+            </li>
+            <li>
+              <a href="./about.html">About</a>
+            </li>
+            <li>
+              <a href="./contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
