finished work on the about and info sections

--- a/index.html
+++ b/index.html
@@ -17,21 +17,49 @@
       <nav class="navbar">
         <div class="container">
           <h1 class="logo">
-            <a href="./index.html">HMB</a>
+            <a href="index.html">HMB</a>
           </h1>
           <ul>
             <li>
-              <a class="current" href="./index.html">Home</a>
+              <a class="current" href="index.html">Home</a>
             </li>
             <li>
-              <a href="./about.html">About</a>
+              <a href="about.html">About</a>
             </li>
             <li>
-              <a href="./contact.html">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
+    <section class="showcase">
+      <div class="showcase-content">
+        <h2><span class="primary-text"> Your </span>Stay In</h2>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+          perspiciatis ad deserunt quia voluptate delectus soluta accusantium a
+          esse adipisci tenetur laudantium aut incidunt veritatis, reprehenderit
+          obcaecati ea maxime amet laborum enim eius! Accusantium, tenetur. Id
+          dolorem est numquam voluptates.
+        </p>
+        <a class="btn-links" href="about.html">About Our Hotel</a>
+      </div>
+    </section>
+    <section class="info">
+      <div class="info-img"></div>
+      <div class="info-content bg-dark">
+        <h2><span class="primary-text">The History</span> Of Our Hotel</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+          non reprehenderit ullam eius. Facere fugiat suscipit id laudantium!
+          Vitae praesentium distinctio nesciunt iure. Rem, unde debitis. Unde,
+          dolor aliquam iure voluptate repellat consequuntur neque cumque
+          eligendi pariatur libero alias nostrum facere facilis vero quasi
+          commodi deserunt, expedita temporibus vel eos!
+        </p>
+        <a class="btn-links btn-light" href="about.html">Read More</a>
+      </div>
+    </section>
   </body>
 </html>
