adding features to home page and footer

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
       content="Welcome to the best booking site in Tel-Aviv Israel"
     />
     <meta name="keywords" content="hotel, booking, Tel-Aviv, vacation" />
+    <script
+      src="https://kit.fontawesome.com/b456e08e90.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./CSS/style.css" />
     <title>Hotel MB | Hotels Booking in Tel-Aviv</title>
   </head>
   <body>
     <header>
-      <nav class="navbar">
+      <nav class="navbar bg-dark">
         <div class="container">
           <h1 class="logo">
             <a href="index.html">HMB</a>
@@ -61,5 +65,33 @@
         <a class="btn-links btn-light" href="about.html">Read More</a>
       </div>
     </section>
+    <section class="features">
+      <div class="box bg-light">
+        <i class="fa-solid fa-hotel fa-3x"></i>
+        <h3>Great Location</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, quam?
+        </p>
+      </div>
+      <div class="box bg-primary">
+        <i class="fa-solid fa-bowl-food fa-3x"></i>
+        <h3>Free Meals</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga,
+          voluptatibus?
+        </p>
+      </div>
+      <div class="box bg-light">
+        <i class="fa-solid fa-dumbbell fa-3x"></i>
+        <h3>Fitness Room</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, sunt.
+        </p>
+      </div>
+    </section>
+    <div class="clearFloat"></div>
+    <footer class="main-footer bg-dark">
+      <p>Hotel MB &copy; 2023, All Rights Reserved</p>
+    </footer>
   </body>
 </html>
