finising the about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,87 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <meta
+      name="description"
+      content="Welcome to the best booking site in Tel-Aviv Israel"
+    />
+    <meta name="keywords" content="hotel, booking, Tel-Aviv, vacation" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <title>Hotel MB | About Page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar bg-dark">
+        <div class="container">
+          <h1 class="logo">
+            <a href="index.html">HMB</a>
+          </h1>
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a class="current" href="about.html">About</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <section class="about-info bg-light py-3">
+      <div class="container">
+        <div class="info-left">
+          <h2 class="L-heading">
+            <span class="primary-text">About</span> Hotel MB
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            natus sunt esse ad temporibus deleniti eos odio quos, voluptatem
+            molestias quis enim praesentium beatae adipisci voluptates illum
+            molestiae tenetur vel porro perferendis animi obcaecati laborum
+            dolores necessitatibus! Minus, deserunt quis!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+            praesentium harum repellendus eos corporis ad enim earum laboriosam
+            nam eius?
+          </p>
+        </div>
+        <div class="info-right">
+          <img src="./images/pexels-pixabay-53464.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+    <div class="clearFloat"></div>
+    <section class="items py-3">
+      <div class="container">
+        <h2 class="L-heading">
+          <span class="primary-text">What</span> Our Guests Say
+        </h2>
+        <div class="item bg-primary">
+          <img src="./images/p1.jpg" alt="alice" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos
+            commodi, quis laboriosam consectetur quo laborum soluta optio
+            tempore corporis magnam aliquam molestiae quam nobis est dolorem non
+            saepe eum corrupti.
+          </p>
+        </div>
+        <div class="item bg-primary">
+          <img src="./images/p2.jpg" alt="samanta" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+            consequatur deserunt corporis voluptates possimus, architecto
+            dolores natus, inventore expedita libero, exercitationem ducimus sed
+            numquam dolorem eveniet aut nostrum! Provident, minus.
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer class="main-footer bg-dark">
+      <p>Hotel MB &copy; 2023, All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
