finishig the contact page and the project all around for now

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <section class="about-info bg-light py-3">
       <div class="container">
         <div class="info-left">
-          <h2 class="L-heading">
+          <h2 class="L-heading py-2">
             <span class="primary-text">About</span> Hotel MB
           </h2>
           <p>
