--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <meta
+      name="description"
+      content="Welcome to the best booking site in Tel-Aviv Israel"
+    />
+    <meta name="keywords" content="hotel, booking, Tel-Aviv, vacation" />
+    <script
+      src="https://kit.fontawesome.com/b456e08e90.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <title>Hotel MB | Contact Page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar bg-dark">
+        <div class="container">
+          <h1 class="logo">
+            <a href="index.html">HMB</a>
+          </h1>
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="about.html">About</a>
+            </li>
+            <li>
+              <a class="current" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <section class="form py-3">
+      <div class="container">
+        <h1 class="L-heading py-2">
+          <span class="primary-text"> Contact</span> Us
+        </h1>
+        <p>Please fill out the form below to contacts us</p>
+
+        <form action="process.php">
+          <div class="form-items">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" />
+          </div>
+          <div class="form-items">
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastName" id="lastName" />
+          </div>
+          <div class="form-items">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
+          </div>
+          <div class="form-items">
+            <label for="massage">Massage</label>
+            <textarea name="massage" id="massage"></textarea>
+          </div>
+          <button type="submit" class="btn-links">Click here</button>
+        </form>
+      </div>
+    </section>
+    <section class="contact-info bg-dark">
+      <div class="container">
+        <div class="box">
+          <i class="fa-solid fa-hotel fa-3x"></i>
+          <h3>Location</h3>
+          <p>somewhere in tel-aviv</p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-phone fa-3x"></i>
+          <h3>Phone</h3>
+          <p>054-15215496</p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-envelope fa-3x"></i>
+          <h3>Email Address</h3>
+          <p>mbhotels@gmail.com</p>
+        </div>
+      </div>
+    </section>
+    <footer class="main-footer bg-dark">
+      <p>Hotel MB &copy; 2023, All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
