--- a/about.html
+++ b/about.html
@@ -10,25 +10,22 @@
     />
     <meta name="keywords" content="hotel, booking, Tel-Aviv, vacation" />
     <link rel="stylesheet" href="./CSS/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
     <title>Hotel MB | About Page</title>
   </head>
   <body>
     <header>
-      <nav class="navbar bg-dark">
+      <nav id="navbar">
         <div class="container">
-          <h1 class="logo">
-            <a href="index.html">HMB</a>
-          </h1>
+          <h1 class="logo"><a href="index.html">HMB</a></h1>
           <ul>
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li>
-              <a class="current" href="about.html">About</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="current" href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
